# sciplot

./: .cvsignore  .gitignore  CHANGES  Imakefile  Makefile.am  README.md  SciPlot.c  SciPlot.h  SciPlot.html  SciPlotDemo.html  SciPlotP.h  SciPlotProg.html  SciPlotUtil.c  SciPlotUtil.h  configure.ac  realtime.c  sciplot-realtime.h2m  sciplot-xyplot.h2m  sciplot_1.36.orig.tar.gz.delta  sciplot_1.36.orig.tar.gz.id  sciplot_1.37.orig.tar.xz.delta  sciplot_1.37.orig.tar.xz.id  xyplot.c
debian/: .cvsignore  .gitignore  README.Source  README.examples  changelog  clean  control  copyright  libsciplot-dev.docs  libsciplot-dev.install  libsciplot1.install  libsciplot1t64.lintian-overrides  not-installed  rules  sciplot-bin.docs  sciplot-bin.install  sciplot-dev.examples  sciplot-dev.files  sciplot-dev.install  sciplot-dev.links  sciplot1.install  sciplot1.links  shlibs
debian/patches/: 0001-Imakefile.patch  0002-include-files.patch  0003-initialise.patch  0004-hypot.patch  0005-autotools.patch  0006-ppc64-patch.patch  series
debian/upstream/: metadata
